Able to correctly align facebook login button

--- a/partials/login_style.css
+++ b/partials/login_style.css
@@ -1,73 +1,3 @@
-/*#loginForm
-{
-   width:500px;
-   height:330px;
-   margin-top:100px;
-   background-color:#FFF;
-   border-radius:3px;
-   box-shadow:0px 0px 10px 0px #424242;
-   padding:10px;
-   box-sizing:border-box;
-   font-family:helvetica;
-   visibility:hidden;
-   display:none;
-}
-
-#registerForm
-{
-    width:500px;
-   height:670px;
-   margin-top:100px;
-   background-color:#FFF;
-   border-radius:3px;
-   box-shadow:0px 0px 10px 0px #424242;
-   padding:10px;
-   box-sizing:border-box;
-   font-family:helvetica;
-   visibility:hidden;
-   display:none; 
-    
-}
-
-/*#loginForm #closeButton
-{
-   position:relative;
-   top:140px;
-   left:735px;
-   width:15px;
-   height:15px;
-}*/
-
-/*#loginForm #email, #registerForm #emailRegister
-{
-   width:250px;
-   height:40px;
-   border:2px solid silver;
-   border-radius:3px;
-   padding:5px;
-}
-#loginForm #password, #registerForm #passwordRegister, #confirmPassword, #firstName, #lastName, #age, #city, #country
-{
-   margin-top:5px;
-   width:250px;
-   height:40px;
-   border:2px solid silver;
-   border-radius:3px;
-   padding:5px;
-}
-#loginForm #login, #registerForm  #register
-{
-   margin-left:-5px;
-   margin-top:10px;
-   width:250px;
-   height:40px;
-   border:none;
-   border-radius:3px;
-   color:#E6E6E6;
-   background-color:grey;
-   font-size:20px;
-}*/
-
 /*Styles for overlay and popup box/modal */
 
 /* Overlay when Modal is open */
@@ -85,10 +15,10 @@
 /* Modal box or Popup box */
 .popupContainer{
 	position:absolute;
-	width:330px;
+	width:400px;
 	height: auto;
 	left:45%;
-	top:80px;
+	top:75px;
 	background: #FFF;
 }
 
@@ -315,4 +245,9 @@ By default, register form is hidden */
      clear:  both;
      overflow:  hidden;
 }
- 
+
+ .fb_login{
+     float: left;
+     position: relative;
+       top: 2px;
+ }
